- rename filterAttributes() to getAttributes() for consistency - convenience methods for AccessRequest username